--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-  
   *{
     margin: 0;
     padding: 0;
@@ -8,4 +6,14 @@
     border: none;
     outline: none;
     font-family: 'Alike Angular', serif;
+  }
+  html{
+    font-size: 60%;
+  }
+  body{
+    background-color: #030206;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    overflow-x: hidden;
   }
