--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header{
   justify-content: space-between;
   align-items: center;
   padding: 30px 30px 10%;
-  
+  height: 250px;
 }
 .logo{
   cursor: pointer;
@@ -76,15 +76,48 @@ button:hover{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 30px;
-  width: 60vh;
-  height: 400px;
-  padding-left: 100px;
-  padding-right: 100px;
+  width: 40vh;
+  height: 40vh;
   border-radius: 19%;
+  margin: -50px 00px 00px 510px;
+  padding: -50px -50px -50px -50px; 
 }
-.hero h1, .hero h2, .hero p{
+.hero h1{
   color: #FFFFFF;
   align-items: center;
-  margin: 0px 0px 0px 959px;
+  margin: -250px 0px 0px 959px;
+  padding: 0px 0px 20px 0px;
+}
+ .hero h2{
+  color: #FFFFFF;
+  align-items: center;
+  margin: 20px 0px 0px 959px;
+  padding: -20px 0px 0px 0px;
+}
+ .hero p{
+  color: #FFFFFF;
+  align-items: center;
+  margin: 50px 0px 0px 959px;
+  padding: 0px 0px 20px 0px;
+}
+.whoami{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  font-size: 12px;
+  color: whitesmoke;
+  text-decoration: none;
+  margin: 170px 0px 0px 770px;
+  animation: blink 1.5s step-start 0s infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 0.0;
+  }
+}
+
+.copyright{
+  margin: 150px 0px 0px -170px;
+}
+.hero{
+  margin: 0px 0px 0px 70px;
 }
