--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,11 @@ list-style: none;
   display: inline-block;
   padding: 0px 50px;
   align-self: auto;
-  margin: 18px 0px 0px -50px; 
+  margin: 18px 0px 0px -50px;
+  
+}
+.nav{
+  position: fixed;
 }
 .navlinks li a{
   transition: all 0.3s ease 0s;
@@ -73,31 +77,32 @@ button:hover{
   align-items: center;
 }
 .ftoexemplo{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 40vh;
   height: 40vh;
   border-radius: 19%;
-  margin: -50px 00px 00px 510px;
-  padding: -50px -50px -50px -50px; 
+  margin: 60px 00px 00px 560px;
+  padding: -50px -50px -50px -50px;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); 
 }
 .hero h1{
   color: #FFFFFF;
   align-items: center;
-  margin: -250px 0px 0px 959px;
+  margin: -250px 0px 0px 979px;
   padding: 0px 0px 20px 0px;
 }
  .hero h2{
   color: #FFFFFF;
   align-items: center;
-  margin: 20px 0px 0px 959px;
+  margin: 20px 0px 0px 979px;
   padding: -20px 0px 0px 0px;
 }
  .hero p{
   color: #FFFFFF;
   align-items: center;
-  margin: 50px 0px 0px 959px;
+  margin: 50px 0px 0px 979px;
   padding: 0px 0px 20px 0px;
 }
 .whoami{
@@ -106,8 +111,12 @@ button:hover{
   font-size: 12px;
   color: whitesmoke;
   text-decoration: none;
-  margin: 170px 0px 0px 770px;
+  margin: 170px 0px 0px 870px;
   animation: blink 1.5s step-start 0s infinite;
+  position: absolute;
+  top: 165%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 @keyframes blink {
   50% {
@@ -116,10 +125,17 @@ button:hover{
 }
 
 .copyright{
-  margin: 150px 0px 0px -170px;
+  margin: 250px 0px 0px -90px;
+  position: absolute;
+  top: 165%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .hero{
-  margin: 0px 0px 0px 70px;
+  margin: 0 auto;
+  position: absolute;
+  height: 200px;
+  position: relative;
 }
 .resumo{
   margin: 400px 0px 0px 45px;
@@ -128,4 +144,14 @@ button:hover{
   font-weight: 200;
   font-size: 17px;
   text-align: center;
+}
+.text{
+  margin: 0;
+  position: absolute;
+  top: 165%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.body{
+  position: fixed;
 }
