--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,14 @@
 @import url(https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Alike+Angular&display=swap);
-.alike-angular-regular {
-  font-family: "Alike Angular", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.agdasima-regular {
-  font-family: "Agdasima", serif;
-  font-weight: 400;
+.montserrat{
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
   font-style: normal;
 }
 
-.agdasima-bold {
-  font-family: "Agdasima", serif;
+.atkinson-hyperlegible-mono{
+  font-family: "Atkinson Hyperlegible Mono", serif;
+  font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
 }
@@ -76,34 +73,17 @@ button:hover{
 .ul{
   align-items: center;
 }
-.ftoexemplo{
-  width: 40vh;
-  height: 40vh;
-  border-radius: 19%;
-  margin: 60px 00px 00px 560px;
-  padding: -50px -50px -50px -50px;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); 
-}
-.hero h1{
-  color: #FFFFFF;
-  align-items: center;
-  margin: -250px 0px 0px 979px;
-  padding: 0px 0px 20px 0px;
-}
- .hero h2{
-  color: #FFFFFF;
-  align-items: center;
-  margin: 20px 0px 0px 979px;
-  padding: -20px 0px 0px 0px;
-}
- .hero p{
-  color: #FFFFFF;
-  align-items: center;
-  margin: 50px 0px 0px 979px;
-  padding: 0px 0px 20px 0px;
+#xibiu{
+  background-image: url('imgsrc/4840485d9087f1de93a80943f6e4fe62.jpg'); 
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: auto;
+  height: 300px;
+  width: 300px;
+  border-radius: 20%;
+  margin-left: 650px;
+  margin-right: 0px;
+  display: inline-block;
 }
 .whoami{
   font-family: 'Montserrat', sans-serif;
@@ -111,31 +91,18 @@ button:hover{
   font-size: 12px;
   color: whitesmoke;
   text-decoration: none;
-  margin: 170px 0px 0px 870px;
   animation: blink 1.5s step-start 0s infinite;
-  position: absolute;
-  top: 165%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 @keyframes blink {
   50% {
     opacity: 0.0;
   }
 }
-
 .copyright{
-  margin: 250px 0px 0px -90px;
-  position: absolute;
-  top: 165%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
 }
 .hero{
   margin: 0 auto;
-  position: absolute;
   height: 200px;
-  position: relative;
 }
 .resumo{
   margin: 400px 0px 0px 45px;
@@ -146,12 +113,7 @@ button:hover{
   text-align: center;
 }
 .text{
-  margin: 0;
-  position: absolute;
-  top: 165%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.body{
-  position: fixed;
+  margin-left: 975px;
+  padding: 0px 0px 0px 0px; 
+  color: #FFFFFF;
 }
